# immich-go-gui

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Documentation.md  GitReadme.md  Immich-go_cli_doc.md  README.md  Refinement-Specs-Gemini.md  Refinement-Specs-Gemini1.md  Refinement-Specs.md  Refinement_prompt.md  Refinements.html  Refinements.md  Refinements_modern.html  Refinements_new.html  Refinements_new.md  TODO.md  app.py  app2.py  command_binary_bugs.md  command_binary_bugs_fix.txt  config.toml  fix_app2.py  fix_binary_logic.py  fix_newlines.py  fix_updates_ui.py  format_fix.py  immich-go-cli-help.md  immichgo_binary.py  immichgo_commands.py  immichgo_config.py  immichgo_modules_bundle.txt  immichgo_schema.py  implementation_guide.md  phase2_review_changes.txt  pyproject.toml  review.html  review.md  review2.html  (+6 more)
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yml  release-please-config.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  codeql.yml  manual-prerelease.yml  pr-fast-feedback.yml  release-please.yml  release.yml
core/: __init__.py  advanced_flags.py  binary_manager.py  cli_contract.py  cli_help.py  cli_schema.py  command_builder.py  config_manager.py  models.py  network.py  process_tracker.py  profile_manager.py  terminal_launcher.py  validation.py
packaging/linux/: immich-go-gui.desktop  nfpm.yaml  (+2 more)
scripts/: bundle_codebase.py  capture_cli_help.py  convert_markdown.py  generate_diff_bundle.py
tests/: stub_immich_go.py  test_app.py
(+27 files in other folders)
