[project]
name = "immich-go-gui"
version = "0.9.3"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.8"
dependencies = [
    "psutil>=6.1.1",
    "pyside6>=6.8.2",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "nuitka>=4.1.3",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-qt>=4.5.0",
]
