[project]
name = "immich-go-gui"
version = "1.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "keyring>=25.0.0",
    "packaging>=24.0.0",
    "psutil>=6.1.1",
    "pyside6>=6.8.2",
    "requests>=2.32.3",
    "tomli-w>=1.2.0",
]

[dependency-groups]
dev = [
    "nuitka>=4.1.3",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-qt>=4.5.0",
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["."]

